--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start:client": "webpack-dev-server --open --config webpack.dev.js",
+    "build:client": "webpack --config webpack.prod.js",
+    "start:server": "nodemon ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
+    "nodemon": "^1.14.11",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.9",
     "sass-loader": "^6.0.6",
@@ -37,6 +39,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "whatwg-fetch": "^2.0.3"
+    "express": "^4.16.2",
+    "pug": "^2.0.0-rc.4",
+    "whatwg-fetch": "^2.0.3",
+    "winston": "^2.4.0"
   }
 }
