--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:client": "webpack-dev-server --open --config webpack.dev.js",
     "build:client": "webpack --config webpack.prod.js",
-    "start:server": "nodemon ./server/index.js"
+    "start:server": "nodemon ./server.bundle.js",
+    "build:server": "webpack --config webpack.server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "ignore-loader": "^0.1.2",
     "node-sass": "^4.7.2",
     "nodemon": "^1.14.11",
     "path": "^0.12.7",
@@ -33,11 +35,14 @@
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-react-css-modules": "^3.3.3",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
@@ -49,6 +54,14 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3",
     "winston": "^2.4.0"
   }
