--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start:client": "webpack-dev-server --open --config webpack.dev.js",
     "build:client": "webpack --config webpack.prod.js",
     "start:server": "nodemon ./server.bundle.js",
-    "build:server": "webpack --config webpack.server.js"
+    "build:server": "webpack --config webpack.server.js --watch",
+    "server": "npm-run-all --parallel build:server start:server",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,16 +23,32 @@
   "homepage": "https://github.com/Siarhei-Balonikau/siarhei-balonikau.github.io#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-jest": "^22.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "ignore-loader": "^0.1.2",
+    "jest": "^22.4.2",
+    "jest-fetch-mock": "^1.4.2",
+    "jest-localstorage-mock": "^2.2.0",
+    "nock": "^9.2.3",
     "node-sass": "^4.7.2",
     "nodemon": "^1.14.11",
+    "npm-run-all": "^4.1.2",
+    "passport-jwt": "^3.0.1",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.9",
+    "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.5.1",
     "sass-loader": "^6.0.6",
+    "shortid": "^2.2.8",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0",
@@ -48,6 +66,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.2",
     "passport": "^0.4.0",
@@ -55,7 +74,6 @@
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -64,5 +82,17 @@
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3",
     "winston": "^2.4.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(jsx|js)?$": "<rootDir>/node_modules/babel-jest"
+    },
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "setupFiles": [
+      "<rootDir>/src/setupTests.js",
+      "jest-localstorage-mock"
+    ]
   }
 }
