--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,5 @@
       }
     }]
   ],
-  "plugins": ["transform-react-jsx", "react-hot-loader/babel", "transform-object-rest-spread"]
+  "plugins": ["transform-object-rest-spread"]
 }
