--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "redux-mock-store": "^1.5.1",
     "sass-loader": "^6.0.6",
     "shortid": "^2.2.8",
+    "stryker": "^0.20.1",
+    "stryker-api": "^0.14.0",
+    "stryker-babel-transpiler": "^0.3.4",
+    "stryker-javascript-mutator": "^0.4.3",
+    "stryker-jest-runner": "^0.5.1",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0",
@@ -84,9 +89,6 @@
     "winston": "^2.4.0"
   },
   "jest": {
-    "transform": {
-      "^.+\\.(jsx|js)?$": "<rootDir>/node_modules/babel-jest"
-    },
     "moduleNameMapper": {
       "^.+\\.(css|less|scss|sass)$": "identity-obj-proxy"
     },
